# utils_3d

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo.py
src/: __init__.py  cli.py  io_mesh.py  utils_3d.py  utils_vtk.py
tests/: test_utils_3d.py
