[project]
name = "utils-3d"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["vtk>=9.2"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
utils-3d = "cli:main"
